# hexane

./: .gitignore  CMakeLists.txt  build.bat  run.bat  vcpkg.json  vklog.txt
include/hexane/: allocator.inl  blocks.inl  constants.inl  draw.inl  heap.inl  indirect.inl  information.inl  perframe.inl  push.inl  rtx.inl  shader_malloc.inl  shared.inl  specs.inl  util.inl  volume.inl  workspace.inl
src/: base_terrain.glsl  compressor.glsl  main.cpp  queue.glsl  raytrace.glsl  uniformity.glsl
